@@ -1,0 +1,6 @@
+scripts/
+NEWS
+NOTES.txt
+README
+Jenkinsfile
+Dockerfile
