@@ -2,6 +2,8 @@ Pending changes in the mainline
 ===============================
 
 
+* Added automated build
+
 2018-03-08 - v 0.2.0
 ====================
 
